--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,11 @@ on:
   repository_dispatch:
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
+    if: |-
+      startsWith(github.event.head_commit.message, 'release') || 
+      startsWith(github.event.head_commit.message, 'Release')
     steps:
       - uses: actions/checkout@v6
         with:
@@ -22,7 +25,6 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'release'
         with:
           files: |
             ntfy-node-x64
